<resources>
    <string name="app_name">Kalkulator2</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="potenca">^</string>
    <string name="oklepaj">( )</string>
    <string name="divide">/</string>
    <string name="krat">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>d
    <string name="pika">.</string>
    <string name="plusMinus">+/-</string>

    <string name="backspace">___</string>
    <string name="display">Enter in a value</string>

    <string name="dvo">[2]</string>
    <string name="osem">[8]</string>
    <string name="sest">[16]</string>
    <string name="ALI">||</string>

    <string name="IN">&&</string>
    <string name="NE">!</string>





</resources>